<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_extended_height"
        android:id="@+id/app_bar_layout">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_extended_height"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            android:contentDescription="@string/collapsing_bar_description"
            android:focusable="true"
            android:id="@+id/collapsing_app_bar"
            android:focusableInTouchMode="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop"
                android:src="@drawable/beach"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/header_image"
                android:focusable="true"/>
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_collapsing_height"
                android:id="@+id/app_bar"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quote_list"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    <ImageView
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:id="@+id/fab3"
        android:focusable="true"
        android:elevation="6dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end"
        android:background="@drawable/oval_ripple"
        android:src="@drawable/ic_action_new"
        android:layout_margin="@dimen/margin"
        android:clickable="true"
        android:contentDescription="@string/image_content_description" />
    <!--<android.support.design.widget.FloatingActionButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:rippleColor="@color/colorControlHighlight"
        android:clickable="true"
        android:src="@drawable/ic_action_new"
        app:elevation="8dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|center" />-->
</android.support.design.widget.CoordinatorLayout>